Bug 441593 - Missing "new storyboard" button when no storyboards exist in docker.
Summary: Missing "new storyboard" button when no storyboards exist in docker.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Storyboard (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2021-08-27 00:30 UTC by Eoin O'Neill
Modified: 2021-09-01 09:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eoin O'Neill 2021-08-27 00:30:55 UTC
SUMMARY
Requiring a right-click isn't tablet friendly.
Comment 1 Emmet O'Neill 2021-09-01 04:02:59 UTC
Git commit 9fb4d14f1357118bb168c9e6eaa554c3bcf2de77 by Emmet O'Neill.
Committed on 01/09/2021 at 04:02.
Pushed by emmetoneill into branch 'master'.

Storyboard: Added create / remove scene buttons to footer.

Reuses localization strings, so should be OK.

M  +37   -0    plugins/dockers/storyboarddocker/StoryboardDockerDock.cpp

https://invent.kde.org/graphics/krita/commit/9fb4d14f1357118bb168c9e6eaa554c3bcf2de77
Comment 2 Halla Rempt 2021-09-01 09:17:34 UTC
Git commit ab01b1937f30fd50e199964e9f9b38a18e5dc1a3 by Halla Rempt, on behalf of Emmet O'Neill.
Committed on 01/09/2021 at 09:16.
Pushed by rempt into branch 'krita/5.0'.

Storyboard: Added create / remove scene buttons to footer.

Reuses localization strings, so should be OK.
(cherry picked from commit 9fb4d14f1357118bb168c9e6eaa554c3bcf2de77)

M  +37   -0    plugins/dockers/storyboarddocker/StoryboardDockerDock.cpp

https://invent.kde.org/graphics/krita/commit/ab01b1937f30fd50e199964e9f9b38a18e5dc1a3