Storyboard: Added create / remove scene buttons to footer.

Reuses localization strings, so should be OK.

BUG:441593
(cherry picked from commit 9fb4d14f1357118bb168c9e6eaa554c3bcf2de77)